--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   "homepage": "https://github.com/ryanmcgranahan22/Maia-and-Ryan-s-Data-Journalism-Project#readme",
   "dependencies": {
     "ejs": "^3.1.6",
-    "jsdoc": "^3.6.7",
-    "plotly.js-dist": "^2.6.3"
+    "jsdoc": "^3.6.7"
   }
 }
