--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": " node fs.js",
-    "build": " node ejs.js",
-    "postbuild": "open http://localhost:3000 && node server.js",
+    "build": " node ejs.js  && cp -R dist build && cp -R  pictures build  ",
+    "postbuild": "open http://localhost:3000&& node server.js",
     "deploy": "npm run publish && npm run production: start",
     "publish": " ",
     "production:start": " "
